2015-07-24  Charlie Zender  <zender@uci.edu>

 	* nco_grd_mk() has fancy metadata annotations and almost generates correct FV grids

2015-07-23  Charlie Zender  <zender@uci.edu>

	* Hook-up nco_grd_mk() to rgr front-end

2015-07-22  Charlie Zender  <zender@uci.edu>

	* Implement nco_grd_mk() to generate SCRIP grid files

	* NCO 4.5.2-alpha5 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.2-alpha5 final changes';git push
	git tag -a 4.5.2-alpha5 -m 'Version 4.5.2-alpha5 tag: ncra -N, diagnose area if possible when area_out == 0.0 (bilinear interpolation)';git push --tags

	* Diagnose (possibly approximate) area_out when area_out == 0.0	due to bilinear remapping

	* Decriminalize mapfiles with area_out == 0.0, e.g., ESMF bilinear remapping (broken since 4.5.2-alpha1)

	* Add bilinear remapping to regression test

2015-07-21  Charlie Zender  <zender@uci.edu>

	* Change meaning of NORMALIZE_BY_WEIGHT to NORMALIZE_WEIGHTS

	* NCO 4.5.2-alpha4 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.2-alpha4 final changes';git push
	git tag -a 4.5.2-alpha4 -m 'Version 4.5.2-alpha4 tag: ncra -N';git push --tags

	* Document -N in man pages, nco.texi

2015-07-20  Charlie Zender  <zender@uci.edu>

	* Add -N = --no-normalize-by-weight = --no_nrm_by_wgt to ncra

2015-07-18  Charlie Zender  <zender@uci.edu>

	* Migrate nco_rgr_esmf2() to user-specified destination grid

	* Add structures for user-specified destination grid

2015-07-16  Charlie Zender  <zender@uci.edu>

	* NCO 4.5.2-alpha3 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.5.2-alpha3 final changes';git push
	git tag -a 4.5.2-alpha3 -m 'Version 4.5.2-alpha3 tag: --glb_att_add';git push --tags

	* Implement glb_att_add (gaa) in all remaining operators

	* Document --glb_att_add

2015-07-15  Charlie Zender  <zender@uci.edu>

	* Change --glb_mtd_spp to --no_glb_mtd so --glb can refer to --gaa

	* Implement glb_att_add (gaa) in ncra
