@@ -887,8 +887,7 @@ extern "C" {
     nco_grd_2D_gss, /* Gaussian latitudes used by global spectral models: CCM 1-3, CAM 1-3, LSM, MATCH, UCICTM */
     nco_grd_2D_ngl_eqi_pol, /* Equi-angle grid including poles, the FV scalar grid (lat[0]=-90): CAM FV, GEOS-CHEM, UCICTM, UKMO */
     nco_grd_2D_ngl_eqi_fst, /* Equi-angle offset grid, FV staggered velocity grid (lat[0]=-89.X)): CIESIN/SEDAC, IGBP-DIS, TOMS AAI */
-    nco_grd_2D_FV, /* My attempt at FV grid */
-    nco_grd_2D_GSC, /* Weird GEOS grid is uneven at Poles */
+    nco_grd_2D_FV, /* FV-scalar grid (equi-angle polar grid, odd number of latitudes) */
     nco_grd_2D_unk, /* Unknown or unclassified, POP displaced-pole */
   } nco_grd_2D_typ_enm;
 
@@ -898,8 +897,7 @@ extern "C" {
     nco_grd_lat_gss, /* Gaussian latitude grid used by global spectral models: CCM 1-3, CAM 1-3, LSM, MATCH, UCICTM */
     nco_grd_lat_ngl_eqi_pol, /* Equi-angle latitude grid with odd number of latitudes so poles are at centers of first and last gridcells (i.e., lat_ctr[0]=-90), aka FV scalar grid: CAM FV, GEOS-CHEM, UCICTM, UKMO */
     nco_grd_lat_ngl_eqi_fst, /* Equi-angle latitude grid with even number of latitudes so poles are at edges of first and last gridcells (i.e., lat_ctr[0]=-89.xxx), aka FV staggered velocity grid: CIESIN/SEDAC, IGBP-DIS, TOMS AAI */
-    nco_grd_lat_FV, /* My attempt at FV grid */
-    nco_grd_lat_GSC, /* Weird GEOS grid is uneven at Poles */
+    nco_grd_lat_FV, /* FV-scalar grid (equi-angle polar grid, odd number of latitudes) */
   } nco_grd_lat_typ_enm;
 
   typedef enum nco_grd_lon_typ_enm{ /* [enm] Longitude grid-type enum */
